# MapaBSAS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.cpp  data.h  expand.cpp  expand.h  makefile  mapa.cpp  mapa.h  shaders.cpp  shaders.h  stderr.txt  stdout.txt  triangulate.cpp  triangulate.h  video.cpp  video.h
Imagenes/: techos.psd
cmake/sdl2/: FindSDL2_IMAGE.cmake
shr/: common.fsh  common.vsh  post.fsh  post.vsh
